--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
 	<link rel="stylesheet" href="css/login.css">
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"> -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<title>Document</title>
+	<link rel="shortcut icon" href="img/cultures.png">
+	<title>古今藏</title>
 </head>
 <body>
 	<div class="header">
